Fix non-square emojis being truncated

--- a/src/components/emoji_picker/emoji_picker.scss
+++ b/src/components/emoji_picker/emoji_picker.scss
@@ -35,6 +35,8 @@ $emoji-picker-emoji-size: 32px;
     .still-image {
       max-width: 100%;
       max-height: 100%;
+      height: 100%;
+      width: 100%;
       object-fit: contain;
     }
   }
